Alignment issue

--- a/styles.css
+++ b/styles.css
@@ -411,7 +411,7 @@ body {
   color: var(--text-dark);
   max-width: calc(var(--max-width) / 2);
   text-align: center;
-  margin-left: 280px;
+  margin-left: 281px;
   /* text-align: right; */
   
 }
